--- a/css/styles.css
+++ b/css/styles.css
@@ -1,10 +1,131 @@
+* {
+    position: relative;
+}
+
 body {
-    font-family: Ubuntu;
+    background: url("../img/back.jpg");
+
+}
+
+a {
+    color: black;
+    text-decoration: none;
+}
+
+.text {
+    padding-top: 7%;
+    color: black;
+}
+
+.solid {
+    border: 2px solid black;
+}
+
+.dashed {
+    border-top: 2px dashed black;
+}
+
+.navbar-brand {
+    padding-top: 25px;
+}
+
+.navbar-brand h1 {
+    font-family: 'Lora', serif;
+    color: #359133;
+    font-size: 1.5em;
+    text-transform: uppercase;
+    font-weight: bold;
+    text-shadow: 1px 1px 1px #222;
+    margin-top: 0;
+    margin-bottom: 0;
+    line-height: .75;
+}
+
+#nav-list a {
+    color: #951C49;
+    text-align: center;
+}
+
+#nav-list a:hover {
+    background: #E7E7E7;
+}
+
+#nav-list a span {
+    font-size: 1.8em;
+}
+
+#nav-list1 a {
+    color: #951C49;
+    text-align: center;
+}
+
+#nav-list1 a:hover {
+    background: #E7E7E7;
+}
+
+#nav-list1 a span {
+    font-size: 1.8em;
+}
+
+#phone {
+    margin-top: 5px;
+}
+
+#phone a { /* Phone number */
+    text-align: right;
+    padding-bottom: 0;
+}
+
+#phone div { /* We Deliver */
+    color: #557c3e;
+    text-align: right;
+    padding-right: 15px;
+}
+
+header {
+    top: 0;
+    width: 100%;
+    position: fixed;
+    z-index: 999;
+}
+
+.panel-footer {
+    margin-top: 70px;
+    padding-top: 35px;
+    padding-bottom: 35px;
+    background-color: rgba(103, 103, 103, 0.83);
+    border-top: 0;
+}
+
+.panel-footer div.row {
+    margin-bottom: 35px;
+}
+
+#hours, #address {
+    line-height: 2;
+}
+
+#hours > span, #address > span {
+    font-size: 1.3em;
+}
+
+#address p {
+    color: #2d6628;
+    font-size: .8em;
+    line-height: 1.8;
+}
+
+#testimonials {
+    font-style: italic;
+}
+
+#testimonials p:nth-child(2) {
+    margin-top: 25px;
 }
 
 
 /* Каталог товаров */
-
+/*TODO CHANGE ITEMS STYLE*/
 .good-item {
     margin: 10px 0;
     padding: 20px;
@@ -31,31 +152,6 @@ body {
     margin-top: 30px;
 }
 
-
-/* Каталог товаров с фильтрами*/
-
-.small-good-item {
-    border: solid 1px gray;
-    padding: 5px;
-    margin-top: 3px;
-    list-style: none;
-    border-radius: 2px;
-}
-
-.small-good-item__img {
-    max-width: 60%;
-}
-
-.small-good-item__name {
-    color: steelblue;
-}
-
-.small-good-item__price {
-    color: red;
-}
-
-
-
 /* Корзина */
 
 .cart-item__btn-dec-count {
@@ -70,57 +166,6 @@ body {
 
 .cart-item__btn-remove {
     cursor: pointer;
-}
-
-
-/* Сравнение товаров */
-
-.compare-table th {
-    text-align: center;
-}
-
-.compare-table th:first-child {
-    text-align: left;
-    vertical-align: middle;
-}
-
-.compare-table__good {
-    font-size: 1.1em;
-    color: steelblue;
-}
-
-.compare-table__photo {
-    max-width: 150px;
-}
-
-.compare-table__price {
-    color: red;
-}
-
-.compare-table__remove {
-    color: steelblue;
-    cursor: pointer;
-    font-size: 0.8em;
-    font-weight: normal;
-    margin-top: 10px;
-    text-decoration: underline;
-}
-
-.compare-table tbody tr td:first-child {
-    font-weight: bold;
-}
-
-
-.compare-table[data-compare="all"] tbody tr {
-     display: table-row;
-}
-
-.compare-table[data-compare="equal"] tbody tr:not(.-equal) {
-    display: none;
-}
-
-.compare-table[data-compare="not-equal"] tbody tr.-equal {
-    display: none;
 }
 
 .modal {
