--- a/css/styles.css
+++ b/css/styles.css
@@ -6,25 +6,68 @@ body {
     background: url("../img/back.jpg");
 
 }
-
 a {
     color: black;
     text-decoration: none;
 }
+/* Каталог товаров */
+/*TODO CHANGE ITEMS STYLE*/
+/*.good-item {*/
+/*    margin: 10px 0;*/
+/*    padding: 20px;*/
+/*    border: solid 1px gray;*/
+/*    border-radius: 3px;*/
+/*}*/
 
-.text {
-    padding-top: 7%;
-    color: black;
+.good-item__id {
+    padding-top: 30px;
+    color: steelblue;
 }
 
-.solid {
-    border: 2px solid black;
+.good-item__name {
+    padding-top: 10px;
+    font-size: 1.1em;
 }
 
-.dashed {
-    border-top: 2px dashed black;
+.good-item__price {
+    padding-top: 10px;
+    color: red;
 }
 
+.good-item__btn-add {
+    margin-top: 30px;
+}
+
+/* Корзина */
+
+.cart-item__btn-dec-count {
+    margin-right: 10px;
+    cursor: pointer;
+}
+
+.cart-item__btn-inc-count {
+    margin-left: 10px;
+    cursor: pointer;
+}
+
+.cart-item__btn-remove {
+    cursor: pointer;
+}
+
+/*.slider-container {*/
+/*    padding-top: 75px;*/
+/*    width: 50%;*/
+/*    margin: auto;*/
+/*    margin-top: 15px;*/
+/*    margin-bottom: 15px;*/
+/*    text-align: center;*/
+/*}*/
+/*.slider img {*/
+/*    text-align: center;*/
+/*    margin: 15px auto 10px;*/
+/*    width: 50%;*/
+/*    height: 50%;*/
+/*}*/
 .navbar-brand {
     padding-top: 25px;
 }
@@ -89,6 +132,18 @@ header {
     z-index: 999;
 }
 
+.modal {
+    z-index: 99999;
+}
+
+.solid {
+    border: 2px solid black;
+}
+
+.dashed {
+    border-top: 2px dashed black;
+}
+
 .panel-footer {
     margin-top: 70px;
     padding-top: 35px;
@@ -123,49 +178,120 @@ header {
     margin-top: 25px;
 }
 
+.text {
+    padding-top: 7%;
+    color: black;
+}
 
-/* Каталог товаров */
-/*TODO CHANGE ITEMS STYLE*/
+.container-form {
+    padding-bottom: 20px;
+    padding-top: 40px;
+    width: 60%;
+    margin: auto;
+    margin-top: 50px;
+}
+
+.container-form > h1 {
+    font-weight: bold;
+    font-size: 37px;
+    text-align: center;
+}
+
+.container-form form {
+    text-align: center;
+    border: 5px solid black;
+}
+
+.container-form input {
+    margin: 10px 10px 10px 10px;
+}
+
 .good-item {
-    margin: 10px 0;
-    padding: 20px;
-    border: solid 1px gray;
-    border-radius: 3px;
+    display: inline-block;
+    border: 1px solid black;
+    margin: 1.5%;
+    text-align: center;
+    padding: 10px;
+    overflow: hidden;
+    background: #ffffff;
 }
 
-.good-item__id {
-    padding-top: 30px;
-    color: steelblue;
+.goood-item:hover {
+    -webkit-transform: scale(1.2);
+    -ms-transform: scale(1.2);
+    transform: scale(1.2);
 }
 
-.good-item__name {
-    padding-top: 10px;
-    font-size: 1.1em;
+.good-item img {
+    width: 50%;
+    height: 50%;
 }
 
-.good-item__price {
-    padding-top: 10px;
-    color: red;
+.productName {
+    margin-top: 0.8%;
 }
 
-.good-item__btn-add {
-    margin-top: 30px;
+.price-block {
+    width: 100%;
+    height: 100%;
+    margin: 5px;
 }
 
-/* Корзина */
-
-.cart-item__btn-dec-count {
-    margin-right: 10px;
-    cursor: pointer;
+.button {
+    width: 100%;
+    height: 100%;
 }
 
-.cart-item__btn-inc-count {
-    margin-left: 10px;
-    cursor: pointer;
+.whenPrint {
+    display: none;
 }
 
-.cart-item__btn-remove {
-    cursor: pointer;
+del {
+    font-size: 10pt;
+    color: #a9a9a9;
+}
+
+.price {
+    display: inline-block;
+    font-size: 19pt;
+}
+
+@media print {
+    .button {
+        display: none;
+
+    }
+
+    .whenPrint {
+        display: inline-block;
+    }
+}
+
+@media (max-width: 767px) {
+    .text {
+        padding-top: 40px;
+    }
+
+    .item {
+        /*margin-top: 20px;*/
+        /*margin-bottom: 20px;*/
+        margin: 20px;
+        overflow: hidden;
+    }
+
+    .navbar-brand h1 { /* Restaurant name */
+        font-size: 5vw; /* 1vw = 1% of viewport width */
+    }
+
+    #collapsable-nav a {
+        font-size: 1.2em;
+    }
+}
+
+@media (max-width: 920px) {
+    .text {
+        padding-top: 65px;
+    }
 }
 
 .modal {
