--- a/css/styles.css
+++ b/css/styles.css
@@ -211,9 +211,14 @@ header {
     border: 1px solid black;
     margin: 1.5%;
     text-align: center;
-    padding: 10px;
+    /*padding: 10px;*/
     overflow: hidden;
     background: #ffffff;
+    position: center;
+}
+
+.description {
+    margin: 10px 0px 10px 0px;
 }
 
 .goood-item:hover {
